# NoiseAnimCurveInterpolator

./: .gitignore  CMakeLists.txt  README.md
cmake/defaults/: Version.cmake
cmake/modules/: FindMaya.cmake
plug-ins/: CMakeLists.txt  main.cpp.in
plug-ins/interpolators/: waveInterpolator.cpp  waveInterpolator.hpp
plug-ins/utils/: preprocessors.hpp
